--- a/projects/coming_soon.html
+++ b/projects/coming_soon.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio</title>
 
-    <link rel="stylesheet" href="https://github.com/sumaokaka/portfolio/blob/master/projects/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="topBanner">
