--- a/projects/garbage.html
+++ b/projects/garbage.html
@@ -49,6 +49,16 @@
                 <p>プログラムは<a href="https://github.com/sumaokaka/AL_M5Stack" target=”_blank”>こちら</a></p>
                 
               </p>
+              <p class="myProfile__name">使用した、身についたスキル</p>
+                    <div class="bar-container">
+                        <div class="bar-label">M5Stack</div>
+                        <div class="bar"><div class="bar-fill M5Stack">50%</div></div>
+                    </div>   
+                    <div class="bar-container">
+                        <div class="bar-label">C++</div>
+                        <div class="bar"><div class="bar-fill RaspberryPi">40%</div></div>
+                    </div>         
+                
             </div>
           </div>
         </div>
