--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
           <div class="sectionItem__content">
             <div class="myProfile">
-              <p class="myProfile__name">高岡　更沙</p>
+              <p class="myProfile__name">髙岡　更沙</p>
               <ul class="myProfile__sns">
                 <li class="myProfile__snsItem">
                   <a href="https://x.com/sumaokaka_" class="myProfile__snsLink">
@@ -130,15 +130,15 @@
                     剣道部　入部
                     
                     <strong>2023年</strong>
-                    Maker　Faire京都出展
+                    Maker Faire京都出展
                     カナダ短期留学
                     近畿地区高専大会剣道の部　女子団体優勝
                     全国高専大会剣道の部　女子団体　３位
                     
                     <strong>2024年</strong>
-                    Maker　Faire京都出展
-                    TechSeeker2024 出展
                     電気技術研究会　副部長
+                    Maker Faire京都出展
+                    TechSeeker2024 出展
                     近畿地区高専大会剣道の部　女子団体準優勝
 
                 </div>
