--- a/projects/garbage.html
+++ b/projects/garbage.html
@@ -56,7 +56,7 @@
                     </div>   
                     <div class="bar-container">
                         <div class="bar-label">C++</div>
-                        <div class="bar"><div class="bar-fill RaspberryPi">40%</div></div>
+                        <div class="bar"><div class="bar-fill Cplusplus">40%</div></div>
                     </div>         
                 
             </div>
